<resources>
    <string name="app_name">TaskInvest</string>
    <string name="input_email">Email</string>
    <string name="input_password">Senha</string>
    <string name="input_name">Nome Sobrenome</string>
    <string name="register_message">Não tem uma conta? Cadastre-se.</string>
    <string name="login_message">Já tem uma conta? Acessar.</string>
    <string name="login_button_label">Acessar</string>
    <string name="register_button_label">Cadastrar</string>
    <string name="taskinvest_icon_description">Imagem de uma prancheta com um símbolo de dinheiro</string>
    <string name="nome_label">Nome</string>
    <string name="confirmar_senha_label">Confirmar Senha</string>
    <string name="arrow_description">Uma seta para à esquerda que permite voltar para a tela anterior</string>
    <string name="logout_option">Sair</string>
    <string name="my_tasks">Minhas Tarefas</string>
    <string name="market_quotes">Mercado/Cotações</string>
    <string name="logout_dialog_title">Sair</string>
    <string name="logout_dialog_message">Você realmente deseja sair?</string>
    <string name="logout_dialog_positive_button">Sim</string>
    <string name="logout_dialog_negative_button">Não</string>
    <string name="add_button_description">Imagem de um botão para adicionar tarefas</string>
    <string name="add_task_close_button_description">Imagem da letra X para fechar o diálogo</string>
    <string name="task_title_label">Título</string>
    <string name="task_description_label">Descrição</string>
    <string name="date_picker_label">Data/Hora</string>
    <string name="add_task_button">Adicionar</string>
    <string name="date_picker_description">Imagem de um calendário</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
