<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora_semi_bold"
        android:text="@string/app_name"
        android:textColor="@color/azul"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="match_parent"
        android:maxWidth="488dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/background_input"
        android:elevation="4dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/input_email"
        android:autofillHints="emailAddress"
        android:inputType="textWebEmailAddress|textPersonName"
        android:padding="12dp"
        android:textColor="@color/cinza_claro"
        android:textColorHint="@color/cinza_claro"/>

    <EditText
        android:id="@+id/editTextSenhaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:background="@drawable/background_input"
        android:elevation="4dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/input_password"
        android:autofillHints="password"
        android:inputType="textPersonName|textPassword"
        android:padding="12dp"
        android:textColor="@color/cinza_claro"
        android:textColorHint="@color/cinza_claro"/>

    <Button
        android:id="@+id/buttonAcessar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/background_botao"
        android:elevation="8dp"
        android:text="@string/login_button_label"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:onClick="validarAutenticacao"/>

    <TextView
        android:id="@+id/cadastroMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register_message"
        android:textColor="@color/azul"
        android:textSize="14sp"/>

</LinearLayout>