<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.CadastroActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        tools:context=".activity.CadastroActivity">

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/arrow_description"
            app:layout_constraintBottom_toTopOf="@+id/nomeLabel"
            app:layout_constraintStart_toStartOf="@+id/nomeLabel"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/nomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_label"
            android:textColor="@color/cinza_escuro"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextNome"
            app:layout_constraintStart_toStartOf="@+id/editTextNome"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="6dp"
            android:elevation="4dp"
            android:hint="@string/input_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/cinza_claro"
            android:textColorHint="@color/cinza_claro"
            app:layout_constraintBottom_toTopOf="@+id/emailLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomeLabel" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_email"
            android:textColor="@color/cinza_escuro"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="6dp"
            android:elevation="4dp"
            android:hint="@string/input_email"
            android:inputType="textWebEmailAddress|textPersonName"
            android:padding="12dp"
            android:textColor="@color/cinza_claro"
            android:textColorHint="@color/cinza_claro"
            app:layout_constraintBottom_toTopOf="@+id/senhaLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

        <TextView
            android:id="@+id/senhaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_password"
            android:textColor="@color/cinza_escuro"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextSenha"
            app:layout_constraintStart_toStartOf="@+id/editTextSenha"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="6dp"
            android:elevation="4dp"
            android:ems="10"
            android:hint="@string/input_password"
            android:inputType="textPersonName|textPassword"
            android:padding="12dp"
            android:textColor="@color/cinza_claro"
            android:textColorHint="@color/cinza_claro"
            app:layout_constraintBottom_toTopOf="@+id/confirmarSenhaLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/senhaLabel" />

        <TextView
            android:id="@+id/confirmarSenhaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_senha_label"
            android:textColor="@color/cinza_escuro"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextConfirmarSenha"
            app:layout_constraintStart_toStartOf="@+id/editTextConfirmarSenha"
            app:layout_constraintTop_toBottomOf="@+id/editTextSenha" />

        <EditText
            android:id="@+id/editTextConfirmarSenha"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="6dp"
            android:elevation="4dp"
            android:ems="10"
            android:hint="@string/confirmar_senha_label"
            android:inputType="textPersonName|textPassword"
            android:padding="12dp"
            android:textColor="@color/cinza_claro"
            android:textColorHint="@color/cinza_claro"
            app:layout_constraintBottom_toTopOf="@+id/buttonCadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmarSenhaLabel" />

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/background_botao"
            android:elevation="8dp"
            android:onClick="validarCampos"
            android:text="@string/register_button_label"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/loginMensagem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmarSenha" />

        <TextView
            android:id="@+id/loginMensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_message"
            android:textColor="@color/azul"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCadastrar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
